package v1;

option go_package = "/.";

message PBHttpResult {
    required bool result = 1;
    required int32 code = 2;
    required bytes message = 3;
}

message PBLocalExecuteResult {
    required PBHttpResult basic = 1;
    optional int32 exitCode = 2;
    optional bytes stdout = 3;
    optional bytes stderr = 4;
    optional bytes message = 5;
}
